--- a/requirements.txt
+++ b/requirements.txt
@@ -15,36 +15,20 @@ decorator==4.4.2
 defusedxml==0.6.0
 entrypoints==0.3
 filelock==3.0.12
-google-auth==1.25.0
-google-auth-oauthlib==0.4.2
 grpcio==1.35.0
 idna==2.10
-ipykernel==5.4.3
-ipython==7.20.0
-ipython-genutils==0.2.0
-ipywidgets==7.6.3
 jedi==0.18.0
 Jinja2==2.11.3
 jmespath==0.10.0
 jsonschema==3.2.0
-jupyter==1.0.0
-jupyter-client==6.1.11
-jupyter-console==6.2.0
-jupyter-core==4.7.1
-jupyterlab-pygments==0.1.2
-jupyterlab-widgets==1.0.0
 MarkupSafe==1.1.1
 mistune==0.8.4
-mkl-fft==1.2.0
-mkl-random==1.1.1
-mkl-service==2.3.0
 munkres==1.1.4
 nbclient==0.5.1
 nbconvert==6.0.7
 nbformat==5.1.2
 nest-asyncio==1.5.1
 networkx==2.3
-notebook==6.2.0
 oauthlib==3.1.0
 olefile==0.46
 packaging==20.9
@@ -81,9 +65,9 @@ tensorboard-plugin-wit==1.8.0
 terminado==0.9.2
 testpath==0.4.4
 tokenizers==0.7.0
-torch==1.7.1
-torchaudio==0.7.0a0+a853dff
-torchvision==0.8.2
+#torch==1.7.1
+#torchaudio==0.7.0a0+a853dff
+#torchvision==0.8.2
 tornado==6.1
 tqdm==4.56.0
 traitlets==5.0.5
